# agentops-traditional-mfg

./: .env.example  .gitignore  .gitmodules  README.md  alembic.ini  docker-compose-test.yml  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
.claude/: launch.json
alembic/: env.py
alembic/versions/: 6536806ba68e_create_factory_table.py  ebc704559248_create_agent_sop_source_skill_tables.py  f5c1cd0e5cf6_create_anomaly_signal_rca_finding_.py
docs/: DEPLOYMENT.md  LIVE-DEMO.md
docs/demo-assets/customer-service-2026-05-21/: 03_skill_v1.json  README.md
docs/demo-assets/metal-mfg-rca-2026-05-20/: 02_seed_script.py  03_skill_v1.json  04_trace_analysis.json  05_self_evolve.json  README.md
docs/demo-assets/semiconductor-rca-2026-05-19/: 01_sop_input.md  02_seed_script.py  03_skill_v1.json  04_trace_analysis.json  05_self_evolve.json
docs/screenshots/: README.md
scripts/: reset_demo.sh  seed_demo_traces.py  seed_metal_mfg_demo_for_ui.py  seed_three_domains_for_ui.py
scripts/demo_assets/: metal_processing_rca_sop.md
ui/: .eslintrc.json  .gitignore  README.md  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
ui/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/app/anomalies/: page.tsx
ui/app/dashboard/: page.tsx
ui/app/factories/: page.tsx
ui/app/regression-runs/: page.tsx
ui/app/sop-upload/: page.tsx
ui/components/domain/: anomaly-card.tsx  anomaly-filters.tsx  (+10 more)
ui/lib/: api.ts  format.ts  parse-notebook.ts  query-keys.ts  types.ts
ui/scripts/: screenshot-demo.mjs
(+14 files in other folders)
